# LLmap

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CROSS_SPECIES_96H.md  CROSS_SPECIES_LOG.md  LICENSE  LLmap_SPEC.md  PHASE_STATE.json  README.md  STATE.md
src/: CMakeLists.txt
src/ai/: bucket_embedder.cpp  bucket_embedder.h  bucket_embedder_core.cpp  bucket_embedder_embed.cpp  bucket_embedder_impl.h  bucket_embedder_tokenize.cpp  foundation_embedder.cpp  foundation_embedder.h  foundation_embedder_core.cpp  foundation_embedder_embed.cpp  foundation_embedder_impl.h  foundation_embedder_tokenize.cpp
src/annot/: annot_types.cpp  annot_types.h  annotation_store.cpp  annotation_store.h  classifier.cpp  classifier.h  classifier_internal.h  classifier_json.cpp  classifier_predicate.cpp  feature_extractor.cpp  feature_extractor.h  interval_tree.cpp  interval_tree.h  variant_priors.cpp  variant_priors.h
src/checkpoint/: CMakeLists_addition.cmake  checkpoint_cache.cpp  checkpoint_cache.h  checkpoint_dispatcher.cpp  checkpoint_dispatcher.h  checkpoint_prompts.cpp  checkpoint_prompts.h  checkpoint_tools.cpp  checkpoint_tools.h  checkpoint_types.h
src/classical/: chain.h  chain_dp.cpp  chain_dp_internal.h  chain_dp_scratch.cpp  chain_score.cpp  classical_pipeline.cpp  classical_pipeline.h  classical_pipeline_extend.cpp  classical_pipeline_internal.h  minimizer_index.h  minimizer_index_core.cpp  minimizer_index_extract.cpp  minimizer_index_impl.h  minimizer_index_io.cpp  wfa2_aligner.h  wfa2_aligner_align.cpp  wfa2_aligner_core.cpp  wfa2_aligner_impl.h
src/claude_agent/: agent_session.cpp  agent_session.h  agent_types.cpp  agent_types.h  anthropic_client.cpp  anthropic_client.h  biology_prior.cpp  biology_prior.h  cuda_sandbox.h  cuda_sandbox_analyzer.cpp  cuda_sandbox_compile.cpp  cuda_sandbox_internal.h  cuda_sandbox_load.cpp  cuda_sandbox_parse.cpp  cuda_sandbox_patterns.cpp  pipeline_agent.cpp  pipeline_agent.h
src/cli/: cmd_align.cpp  cmd_align_args.cpp  cmd_align_internal.h  cmd_align_llm.cpp  cmd_align_psv.cpp  cmd_align_report.cpp  cmd_align_run.cpp  cmd_allpair.cpp  cmd_annotate_ref.cpp  cmd_annotate_specific_loci.cpp  cmd_check.cpp  cmd_generate_synth.cpp  cmd_igh_match.cpp  cmd_igh_resort.cpp  cmd_index.cpp  cmd_sc_paralog_matrix.cpp  cmd_sc_qc_report.cpp  cmd_sc_qc_report_args.cpp  cmd_sc_qc_report_internal.h  cmd_validate_real.cpp  cmd_variant_ingest.cpp  cmd_variant_query.cpp  commands.h  llmap_main.cpp
src/core/: alignment_record.cpp  alignment_record.h  arena.h  bucket_pyramid.cpp  bucket_pyramid.h  cache_layout.h  config.cpp  config.h  config_parse.cpp  error.cpp  error.h  logging.cpp  logging.h  profiler.h  remote_fetch.cpp  remote_fetch.h  simd.cpp  simd.h  simd_encode.cpp  simd_hash.cpp  simd_internal.h  thread_pool.cpp  thread_pool.h  v1_readiness.cpp  v1_readiness.h  v1_readiness_checks.cpp  version.h.in  version_util.h  wave_state.cpp  wave_state.h
src/igh_locus/: igh_anchor_catalog.cpp  igh_anchor_catalog.h  igh_region.h  igh_resort.cpp  igh_resort.h
src/io/: fasta_reader.cpp  fasta_reader.h  fastq_reader.cpp  fastq_reader.h  mmap_fasta.cpp  mmap_fasta.h  mmap_fasta_internal.h  mmap_fasta_seq.cpp
src/output/: bam_writer.cpp  bam_writer.h  bam_writer_cigar.cpp  cluster_writer.cpp  cluster_writer.h  parquet_reader.cpp  parquet_reader.h  parquet_reader_impl.h  parquet_reader_read.cpp  parquet_reader_util.cpp  parquet_writer.cpp  parquet_writer.h  parquet_writer_convert.cpp  parquet_writer_impl.h  parquet_writer_write.cpp
src/psv/: psv_assigner.cpp  psv_assigner.h  psv_catalog.cpp  psv_catalog.h  psv_types.h
src/reference_collapse/: collapse_check.cpp  collapse_check.h  em_iterator.cpp  em_iterator.h  member_propagation.cpp  member_propagation.h  reference_index.cpp  reference_index.h  reference_index_builder.cpp  reference_index_impl.h  reference_index_io.cpp  refinement.cpp  refinement.h  stage2_pipeline.cpp  stage2_pipeline.h  stage2_pipeline_core.cpp  stage2_pipeline_em.cpp  stage2_pipeline_impl.h  stage2_pipeline_init.cpp
src/self_interference/: allpair_pipeline.cpp  allpair_pipeline.h  allpair_pipeline_internal.h  allpair_pipeline_io.cpp  allpair_pipeline_stages.cpp  cluster_rep.cpp  cluster_rep.h  cluster_rep_methods.cpp  cluster_rep_result.cpp  cluster_rep_selector.cpp  faiss_wrapper.cpp  faiss_wrapper.h  faiss_wrapper_impl.h  faiss_wrapper_index.cpp  faiss_wrapper_search.cpp  faiss_wrapper_util.cpp  leiden_clustering.cpp  leiden_clustering.h  leiden_clustering_core.cpp  leiden_clustering_phases.cpp  leiden_clustering_result.cpp  self_wavecollapse.cpp  self_wavecollapse.h  self_wavecollapse_core.cpp  self_wavecollapse_em.cpp  self_wavecollapse_impl.h  self_wavecollapse_result.cpp  similarity_graph.cpp  similarity_graph.h  similarity_graph_build.cpp  similarity_graph_internal.h  similarity_graph_io.cpp  similarity_graph_query.cpp
src/singlecell/: cb_preservation.cpp  cb_preservation.h  cb_preservation_extract.cpp  cb_preservation_internal.h  cb_preservation_whitelist.cpp  per_cell_paralog.cpp  per_cell_paralog.h  per_cell_paralog_io.cpp  sc_paralog_qc.cpp  sc_paralog_qc.h  sc_paralog_qc_report.cpp
src/synthetic/: benchmark_truth.cpp  benchmark_truth.h  igh_locus_generator.cpp  igh_locus_generator.h  igh_locus_generator_core.cpp  igh_locus_generator_presets.cpp
src/validation/: end_to_end.cpp  killswitch.cpp  killswitch.h  real_reference.cpp  real_reference.h  real_reference_internal.h  real_reference_parse.cpp  real_reference_slurm.cpp  real_reference_validate.cpp
tests/: CMakeLists.txt
tests/bench/: bench_classical_pipeline.cpp  bench_embedder_throughput.cpp
tests/data/: test_dna_embedder.onnx
tests/integration/: test_align_integration.cpp
tests/unit/: test_agent_session.cpp  test_agent_types.cpp  test_alignment_record.cpp  test_allpair_pipeline.cpp  test_anthropic_client.cpp  test_arena.cpp  test_bam_writer.cpp  test_benchmark_truth.cpp  test_biology_prior.cpp  test_bucket_embedder.cpp  test_bucket_pyramid.cpp  test_cache_layout.cpp  test_cb_preservation.cpp  test_chain.cpp  test_checkpoint.cpp  test_config.cpp  (+39 more)
(+10859 files in other folders)
